# STM32-Nucleo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .todo  .typos.toml  CMakeLists.txt  CMakePresets.json  README.md  mk.sh  setup.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
Application/: Application.cpp  CMakeLists.txt
Application/Logging/: CMakeLists.txt  LogConsumerId.h  LogToUart.cpp  LogToUart.hpp
Application/Source/: Application.cpp
Board/: CMakeLists.txt
Board/G491RE/: CMakeLists.txt
Board/G491RE/Include/: Board.h
Board/G491RE/Startup/: CMakeLists.txt
Board/G491RE/Startup/Source/: LinkerScript.ld  Startup.c  Startup.h
Board/G491RE/System/: CMakeLists.txt
Board/G491RE/System/Include/: System.h
Board/G491RE/System/Source/: System.cpp
Commons/: CMakeLists.txt
Commons/Include/: Commons.h
Commons/Source/: Commons.c
Drivers/: CMakeLists.txt
Drivers/G4/: CMakeLists.txt  stm32g4xx_hal_msp.c
Drivers/G4/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
Drivers/G4/Core/Include/: Core.h  stm32g4xx_it.h
Drivers/G4/Core/Source/: Core.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_stm32g4xx.c
G491RE/: CMakeLists.txt
G491RE/Main/Source/: Main.c  Main.h  Startup.c  Startup.h
G491RET6/: CMakeLists.txt
G491RET6/Core/: CMakeLists.txt
G491RET6/Core/Include/: Main.h
G491RET6/Core/Source/: Main.c  Main.h
G491RET6/Main/: CMakeLists.txt
G491RET6/Main/Include/: Main.h
G491RET6/Main/Source/: Main.c  Startup.c  Syscalls.c
G491RET6/Startup/: CMakeLists.txt  LinkerScript.ld  Startup.c  Startup.h
Modules/: CMakeLists.txt
Nucleo/: CMakeLists.txt
Nucleo/Main/: CMakeLists.txt
Nucleo/Main/Source/: Main.c  Main.cpp
